# API_me

./: CMakeLists.txt  README.md  ReleaseNote.txt  config-file  layoutfilename.xml
docs/: CIBEST_Drivers_API_Trunexa_List.xlsx  How_to_compile  LinuxAPI-apiguide.html  mainpage.md
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_05901ce02010753b8a2ece4ab8797616.html  dir_05f7efacae39a614473cd749bc1b2e30.html  dir_087499d7a13f38d55db7a0664591f1b8.html  dir_17467ea0062ab7e712bd017a07710b34.html  dir_1cc8eed4d343275f9bdb89dc1bc2663c.html  dir_21eb8bc128fe839c1921687f688a25a5.html  dir_21fd94c67bb5c298638eb71c56dba9cc.html  dir_288822406808d7f0b7f814a69c154385.html  dir_292d6041febd40a78c7e4070e1d445b0.html  dir_2b9e8740aa4e7c4596871713983b74a0.html  dir_316c444d1bfdc6a4157c17fc84a6f515.html  dir_33a54e573580e5e8153d64763f8619fc.html  dir_33f18eaa0bb1e926c182c0502c16bad7.html  dir_491f8ac81e82f1a46383a1497627dbf8.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4a5e9982fb014d9f721106c905f2d982.html  dir_4c68685379da5658b709108e75c6c629.html  dir_4e47ab8c8471dac4425f1c11449da785.html  dir_5ce69decf074ac0732f4f7bb0ae543e3.html  dir_6800ee6264f7df0129a489f405fef4fd.html  dir_6bd8e7a0de3d99c5dc5dd6ad0c60150f.html  dir_6ee83757bee6ee2b615b4c5e73e9cb78.html  dir_6f37ffb59929bda7905a6895380368ba.html  dir_6fd04cddc24c166b7fdad50a0dbc3a05.html  dir_76f1ad374803a5be93b0696452330096.html  dir_776902d10f6455463d399c7beec4f343.html  dir_7b16b70405d2ba809b24bf06fa502f88.html  dir_7c5304e63852e417b1f24ec139c62ccb.html  dir_7d760ceed7a54c5c0119654cf263e550.html  dir_7de3a738ba7b52a35b4729e5b1093272.html  dir_843d0ab42feb65c03e8aa6750a06eb81.html  dir_8a02932d5f57373c6f1cd932fa3c6bf9.html  dir_8c237c3f3bde2319a24f244e0b42fa59.html  dir_8cb694a9d6fc76c86b2778d98d0d97f4.html  dir_936b2a313d57a60f072dd4d1a874f605.html  dir_96ef0baec21b93c248994043855b61a0.html  dir_9758c818018f9e35f572c4397f602db8.html  (+45 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  (+38 more)
modules/handler/libgpio/: CMakeLists.txt  CMakeLists.txt~
modules/handler/libgpio/hdr/: gpio.h~  libgpio.h
modules/handler/libgpio/src/: gpio.c~  libgpio.c
modules/handler/serial/: CMakeLists.txt
modules/handler/serial/hdr/: serial.h
modules/handler/serial/src/: serial.c
modules/hardware/scene5-imx8m/: CMakeLists.txt
modules/hardware/scene5-imx8m/BLUETOOTH/: CMakeLists.txt  CMakeLists.txt~
modules/hardware/scene5-imx8m/BLUETOOTH/hdr/: bluetooth.h
modules/hardware/scene5-imx8m/BLUETOOTH/src/: bluetooth.c
modules/hardware/scene5-imx8m/CAN/: CMakeLists.txt
modules/hardware/scene5-imx8m/CAN/hdr/: can.h  can.h~
modules/hardware/scene5-imx8m/CAN/src/: can.c
modules/hardware/scene5-imx8m/ETH_SWITCH/: CMakeLists.txt  test.c
modules/hardware/scene5-imx8m/ETH_SWITCH/hdr/: nmcommon.h  switch.h
modules/hardware/scene5-imx8m/ETH_SWITCH/src/: nmcommon.c  switch.c  vector.c
modules/hardware/scene5-imx8m/GPIO/: CMakeLists.txt
modules/hardware/scene5-imx8m/GPIO/hdr/: gpio.h
modules/hardware/scene5-imx8m/GPIO/src/: gpio.c
modules/hardware/scene5-imx8m/GPS/: CMakeLists.txt  CMakeLists.txt~
modules/hardware/scene5-imx8m/GPS/hdr/: gps.h
modules/hardware/scene5-imx8m/GPS/src/: gps.c
modules/hardware/scene5-imx8m/RS232/: CMakeLists.txt
modules/hardware/scene5-imx8m/RS232/hdr/: rs232.h
modules/hardware/scene5-imx8m/RS232/src/: rs232.c
modules/hardware/scene5-imx8m/RS485/: CMakeLists.txt
modules/hardware/scene5-imx8m/RS485/hdr/: rs485.h
modules/hardware/scene5-imx8m/RS485/src/: rs485.c
modules/hardware/scene5-imx8m/RTC/: CMakeLists.txt
modules/hardware/scene5-imx8m/RTC/hdr/: rtc.h
modules/hardware/scene5-imx8m/RTC/src/: rtc.c
modules/hardware/scene5-imx8m/SIM/: CMakeLists.txt
modules/hardware/scene5-imx8m/SIM/hdr/: sim.h  vector.h
modules/hardware/scene5-imx8m/SIM/src/: sim.c
modules/hardware/scene5-imx8m/WATCHDOG/: CMakeLists.txt~
modules/hardware/scene5-imx8m/WATCHDOG/hdr/: watchdog.h
modules/hardware/scene5-imx8m/WATCHDOG/src/: watchdog.c
modules/hardware/scene5-imx8m/WIFI/: CMakeLists.txt  CMakeLists.txt~
modules/hardware/scene5-imx8m/WIFI/hdr/: common.h  network.h
modules/hardware/scene5-imx8m/WIFI/src/: common.c  network.c  vector.c
modules/hardware/scene5-imx8m/hdr/BLUETOOTH/: bluetooth.h
modules/hardware/scene5-imx8m/hdr/RS232/: rs232.h
modules/hardware/scene5-imx8m/hdr/RS485/: rs485.h
modules/hardware/scene5-imx8m/hdr/SIM/: sim.h
modules/hardware/scene5-imx8m/hdr/WATCHDOG/: watchdog.h
modules/hardware/scene5-imx8m/hdr/WIFI/: network.h  vector.h
modules/hardware/scene5-imx8m/src/BLUETOOTH/: bluetooth.c
modules/hardware/scene5-imx8m/src/GPIO/: CMakeLists.txt  gpio.c
modules/hardware/scene5-imx8m/src/GPS/: CMakeLists.txt  gps.c
modules/hardware/scene5-imx8m/src/RS232/: CMakeLists.txt  rs232.c
modules/hardware/scene5-imx8m/src/RS485/: CMakeLists.txt  rs485.c
modules/hardware/scene5-imx8m/src/SIM/: CMakeLists.txt  sim.c~
modules/hardware/scene5-imx8m/src/WATCHDOG/: CMakeLists.txt  watchdog.c
modules/hardware/scene5-imx8m/src/WIFI/: CMakeLists.txt  CMakeLists.txt~  common.c  main.c  network.c
modules/hardware/scene5-imx8mini/: CMakeLists.txt  CMakeLists.txt~
modules/hardware/scene5-imx8mini/hdr/BLUETOOTH/: bluetooth.h
modules/hardware/scene5-imx8mini/hdr/GPIO/: gpio.h
modules/hardware/scene5-imx8mini/hdr/GPS/: gps.h
modules/hardware/scene5-imx8mini/hdr/RS232/: rs232.h
modules/hardware/scene5-imx8mini/src/BLUETOOTH/: CMakeLists.txt  bluetooth.c
modules/hardware/scene5-imx8mini/src/RS232/: rs232.c
modules/hardware/scene5-imx8mini/src/RS485/: rs485.c
modules/hardware/scene5-imx8mini/src/SIM/: CMakeLists.txt  sim.c
modules/hardware/scene5-imx8mini/src/WATCHDOG/: watchdog.c
modules/hardware/scene5-imx8mini/src/WIFI/: CMakeLists.txt  network.c  vector.c
(+165 files in other folders)
