
cmake_minimum_required(VERSION 3.5.1)

#SELECT DEVICE
OPTION(SCENCE5-IMX8M				"Compile library for scene5-imx8m " ON)
OPTION(SCENCE5-IMX8MINI				"Compile library for scene5-imx8mini " OFF)

# BUILD THE COMBINED LIB?
OPTION(COMBINE 					    "build the combined library " OFF)

#SELECT MODULES
OPTION(BLUETOOTH				    "Compile library for bluetooth " ON)
OPTION(WIFI					        "Compile library for wifi " ON)
OPTION(RS232					    "Compile library for rs232 " ON)
OPTION(RS485					    "Compile library for rs485 " ON)
OPTION(GPIO					        "Compile library for gpio " ON)
OPTION(SIM					        "Compile library for sim " ON)
OPTION(GPS					        "Compile library for gps " ON)
OPTION(WATCHDOG					    "Compile watchdog library " ON)
OPTION(CAN					        "Compile watchdog library " ON)
OPTION(RTC					        "Compile watchdog library " ON)

PROJECT(TrunexaAPis)
add_definitions("-Wall -Wextra")
IF(SCENCE5-IMX8M AND SCENCE5-IMX8MINI)
    MESSAGE(FATAL_ERROR "Can not select both SCENCE5-IMX8M and SCENCE5-IMX8MINI")
ENDIF()

IF(SCENCE5-IMX8M)
	set(IMX_MODEL "scene5-imx8m")
ELSEIF(SCENCE5-IMX8MINI)
	set(IMX_MODEL "scene5-imx8mini")
ENDIF()

IF(BLUETOOTH)
	ADD_SUBDIRECTORY(modules/hardware/${IMX_MODEL}/BLUETOOTH)
ENDIF()
IF(WIFI)
	ADD_SUBDIRECTORY(modules/hardware/${IMX_MODEL}/WIFI)
ENDIF()
IF(RS232)
	ADD_SUBDIRECTORY(modules/hardware/${IMX_MODEL}/RS232)
ENDIF()
IF(RS485)
	ADD_SUBDIRECTORY(modules/hardware/${IMX_MODEL}/RS485)
ENDIF()
IF(GPIO)
	ADD_SUBDIRECTORY(modules/hardware/${IMX_MODEL}/GPIO)
ENDIF()
IF(SIM)
	ADD_SUBDIRECTORY(modules/hardware/${IMX_MODEL}/SIM)
ENDIF()
IF(GPS)
	ADD_SUBDIRECTORY(modules/hardware/${IMX_MODEL}/GPS)
ENDIF()
IF(WATCHDOG)
	ADD_SUBDIRECTORY(modules/hardware/${IMX_MODEL}/WATCHDOG)
ENDIF()
IF(CAN)
	ADD_SUBDIRECTORY(modules/hardware/${IMX_MODEL}/CAN)
ENDIF()
IF(RTC)
	ADD_SUBDIRECTORY(modules/hardware/${IMX_MODEL}/RTC)
ENDIF()


ADD_SUBDIRECTORY(modules/handler/usb)
ADD_SUBDIRECTORY(modules/handler/libgpio)
ADD_SUBDIRECTORY(modules/handler/serial)
ADD_SUBDIRECTORY(modules/handler/iwlib)
IF(COMBINE)
	file(GLOB SRC modules/hardware/${IMX_MODEL}/*/src/*.c)
	add_library(${IMX_MODEL} SHARED ${SRC})
	target_include_directories(${IMX_MODEL} PRIVATE ${LIBNM_INCLUDE_DIRS} ${GLIB_INCLUDE_DIRS} PUBLIC BLUETOOTH WIFI RS232 RS485 GPIO SIM GPS WATCHDOG CAN)
	target_link_libraries(${IMX_MODEL} ${GLIB_LIBRARIES} ${LIBNM_LIBRARIES} ${LIBNM_GLIB_LIBRARIES} BLUETOOTH WIFI RS232 RS485 GPIO SIM GPS WATCHDOG CAN)
ENDIF()

# as it's not part of the project but copied, ignore warnings for this lib
target_compile_options(IWLIB PUBLIC -w)